--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,13 @@
         android:theme="@style/Theme.LegendaryCricket"
         tools:targetApi="31">
         <activity
+            android:name=".about_club"
+            android:exported="false" />
+        <activity
             android:name=".deshboard"
+            android:exported="false" />
+        <activity
+            android:name=".club"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
