--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,13 +14,17 @@
         tools:targetApi="31">
         <activity
 
+            android:name=".about_club"
+            android:exported="false" />
+        <activity
+
             android:name=".DetailsActivity"
             android:exported="false" />
         <activity
-            android:name=".deshboard"
+            android:name=".club"
             android:exported="false" />
         <activity
-            android:name=".club"
+            android:name=".deshboard"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
