--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,4 +44,5 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
 
     implementation 'de.hdodenhof:circleimageview:3.1.0'
+    implementation 'com.github.AtifSayings:Animatoo:1.0.1'
 }
