--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,11 +13,15 @@
         android:theme="@style/Theme.LegendaryCricket"
         tools:targetApi="31">
         <activity
-
+            android:name=".historydetails"
+            android:exported="false" />
+        <activity
+            android:name=".history"
+            android:exported="false" />
+        <activity
             android:name=".about_club"
             android:exported="false" />
         <activity
-
             android:name=".DetailsActivity"
             android:exported="false" />
         <activity
